# napari-labels-overlap

./: LICENSE  README.md  mkdocs.yml  setup.cfg  tox.ini
.github/workflows/: plugin_preview.yml
docs/: index.md
src/napari_labels_overlap/: __init__.py  _dock_widget.py  napari.yaml
src/napari_labels_overlap/_tests/: test_dock_widget.py
