[metadata]
name = napari-labels-overlap
version = 0.0.2
author = Chi-Li Chiu
author_email = cchiu@chanzuckerberg.com
url = https://github.com/chili-chiu/napari-labels-overlap
license = BSD-3-Clause
description = create an overlap labels layer from two labels layers
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls = 
	Bug Tracker = https://github.com/chili-chiu/napari-labels-overlap/issues
	Documentation = https://github.com/chili-chiu/napari-labels-overlap#README.md
	Source Code = https://github.com/chili-chiu/napari-labels-overlap
	User Support = https://github.com/chili-chiu/napari-labels-overlap/issues

[options]
packages = find:
python_requires = >=3.7
package_dir = 
	=src
# add your package requirements here
install_requires = 
	napari-plugin-engine>=0.1.4
	skimage

[options.packages.find]
where = src

[options.entry_points]
napari.manifest = 
	napari-labels-overlap = napari_labels_overlap:napari.yaml

[options.package_data]
napari_labels_overlap = napari.yaml

